# OpenCircuitBoard

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  BuildProfile.json  Main.tscn  Makefile  README.md  main.tscn  project.godot
.codex/skills/frontend-tests/: SKILL.md
.codex/skills/frontend-tests/agents/: openai.yaml
.codex/skills/frontend-visual-validation/: SKILL.md
.codex/skills/frontend-visual-validation/agents/: openai.yaml
.codex/skills/frontendTests/: SKILL.md
.codex/skills/frontendTests/agents/: openai.yaml
.codex/skills/platform-shell/: SKILL.md
.codex/skills/platform-shell/agents/: openai.yaml
assets/: ThirdPartyNotices.md  circuitEditor.svg.import  clipboard.svg.import  eventLog.svg.import  filePenLine.svg.import  filePlus.svg.import  folderOpen.svg.import  history.svg.import  orGate.svg.import  panelLeftClose.svg.import  panelLeftOpen.svg.import  panelRightClose.svg.import  panelRightOpen.svg.import  pause.svg.import  save.svg.import  skipBack.svg.import  skipForward.svg.import  thirdPartyNotices.md
assets/inks/: and.svg.import  buffer.svg.import  bus.svg.import  busCyan.svg.import  busGreen.svg.import  busMagenta.svg.import  busRed.svg.import  busYellow.svg.import  clock.svg.import  cross.svg.import  latchOff.svg.import  latchOn.svg.import  led.svg.import  mesh.svg.import  nand.svg.import  nor.svg.import  not.svg.import  or.svg.import  read.svg.import  trace.svg.import  traceBlue.svg.import  traceCyan.svg.import  traceGreen.svg.import  traceMagenta.svg.import  traceRed.svg.import  tunnel.svg.import  write.svg.import  xnor.svg.import  xor.svg.import
extension/: CMakeLists.txt  OcbSimulation.gdextension.in
extension/src/: GraphLocalityOrderer.cpp  GraphLocalityOrderer.hpp  OcbSimulation.cpp  OcbSimulation.hpp  RegisterTypes.cpp  RuntimeArena.hpp  SimulationCore.cpp  SimulationCore.hpp
extension/tests/: CoreBenchmark.cpp  GraphLocalityOrdererTests.cpp  SimulationCoreTests.cpp
scenes/: CircuitTile.tscn  circuitTile.tscn
scenes/docks/: CircuitEditorDock.tscn  ClipboardDock.tscn  EventLogDock.tscn  circuitEditorDock.tscn  clipboardDock.tscn  eventLogDock.tscn
scripts/: BoardCamera.gd  CanvasResizeOverlay.gd  CircuitBoard.gd  CircuitEditorDock.gd  CircuitTile.gd  ClipboardDock.gd  DockRegistry.gd  DockView.gd  EditorUi.gd  EventLogDock.gd  InkButton.gd  InkRegistry.gd  InkVariantIndicator.gd  ProjectManager.gd  SelectionOverlay.gd  SimulationBridge.gd  boardCamera.gd  boardCamera.gd.uid  circuitBoard.gd  circuitBoard.gd.uid  circuitEditorDock.gd  circuitEditorDock.gd.uid  circuitTile.gd  circuitTile.gd.uid  clipboardDock.gd  clipboardDock.gd.uid  dockRegistry.gd  dockRegistry.gd.uid  dockView.gd  dockView.gd.uid  editorUi.gd  editorUi.gd.uid  eventLogDock.gd  eventLogDock.gd.uid  inkButton.gd  inkButton.gd.uid  inkGlyph.gd  inkRegistry.gd  inkRegistry.gd.uid  inkVariantIndicator.gd  (+7 more)
scripts/tests/: BoardCapacityProbe.gd  BoardCaptureTest.gd  BoardEdgeCaptureTest.gd  BusColorMenuCaptureTest.gd  BusVariantTest.gd  CanvasResizeCaptureTest.gd  CanvasResizeTest.gd  ClipboardDockCaptureTest.gd  ClipboardDockTest.gd  ClipboardHistoryTest.gd  ClockSettingsMenuCaptureTest.gd  ClockSettingsTest.gd  ComponentSettingsTest.gd  CutClipboardTest.gd  DefaultZoomCaptureTest.gd  DockLayoutTest.gd  DockMenuCaptureTest.gd  DualDockCaptureTest.gd  EventLogDockCaptureTest.gd  EventLogDockTest.gd  FrontendTest.gd  FrontendTestContext.gd  FrontendTestFixtures.gd  FrontendTestRegistry.gd  FrontendTestSuite.gd  InitialInterfaceTest.gd  InkPaletteTest.gd  InkStatesCaptureTest.gd  InterfaceCaptureTest.gd  InvalidPasteTest.gd  LoopFrequencyControlTest.gd  NativeSimulationTest.gd  PastePreviewCaptureTest.gd  PastePreviewTest.gd  PastedLayeringCaptureTest.gd  ProjectDialogsTest.gd  ProjectOpenDialogCaptureTest.gd  ProjectRoundTripTest.gd  ProjectSaveDialogCaptureTest.gd  RightClickDeleteTest.gd  (+64 more)
shaders/: BoardPattern.gdshader  CanvasShadow.gdshader  TileExtrusion.gdshader  boardGrid.gdshader  boardGrid.gdshader.uid  boardPattern.gdshader  boardPattern.gdshader.uid  canvasBackdrop.gdshader  canvasShadow.gdshader  canvasShadow.gdshader.uid  tileExtrusion.gdshader  tileExtrusion.gdshader.uid
